--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i';
-@import 'https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i';
+@import url("https://fonts.googleapis.com/css?family=Work+Sans:400,700");
 .strikethrough {
   text-decoration: line-through; }
 
