--- a/css/bootstrap-grid.css
+++ b/css/bootstrap-grid.css
@@ -12,10 +12,10 @@ html {
   box-sizing: inherit; }
 
 .bg-next {
-  background-color: #40647C !important; }
+  background-color: #ffa963 !important; }
 
 .c-next {
-  color: #40647C !important; }
+  color: #ffa963 !important; }
 
 .logotype-text {
   text-transform: uppercase;
