--- a/css/bootstrap-reboot.css
+++ b/css/bootstrap-reboot.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Work+Sans:400,700");
 .bg-next {
-  background-color: #40647C !important; }
+  background-color: #ffa963 !important; }
 
 .c-next {
-  color: #40647C !important; }
+  color: #ffa963 !important; }
 
 .logotype-text {
   text-transform: uppercase;
