--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6,10 +6,10 @@
  */
 @import url("https://fonts.googleapis.com/css?family=Work+Sans:400,700");
 .bg-next {
-  background-color: #40647C !important; }
+  background-color: #ffa963 !important; }
 
 .c-next {
-  color: #40647C !important; }
+  color: #ffa963 !important; }
 
 .logotype-text {
   text-transform: uppercase;
@@ -23,7 +23,7 @@
   letter-spacing: 0.2rem;
   line-height: 9rem;
   hanging-punctuation: force-end;
-  color: #ffa963; }
+  color: #40647C; }
 
 .index-links:hover {
   text-decoration: none;
@@ -369,10 +369,10 @@ blockquote {
   margin: 0 0 1rem; }
 
 a {
-  color: #ffa963;
+  color: #40647C;
   text-decoration: none; }
   a:focus, a:hover {
-    color: #ff7f17;
+    color: #263b4a;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -1570,7 +1570,7 @@ pre {
   .form-control:focus {
     color: #464a4c;
     background-color: #fff;
-    border-color: #ffefe3;
+    border-color: #7fa4bd;
     outline: none; }
   .form-control::placeholder {
     color: #636c72;
@@ -1824,7 +1824,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
     text-decoration: none; }
   .btn:focus, .btn.focus {
     outline: 0;
-    box-shadow: 0 0 0 2px rgba(255, 169, 99, 0.25); }
+    box-shadow: 0 0 0 2px rgba(64, 100, 124, 0.25); }
   .btn.disabled, .btn:disabled {
     cursor: not-allowed;
     opacity: .65; }
@@ -1837,23 +1837,23 @@ fieldset[disabled] a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #ffa963;
-  border-color: #ffa963; }
+  background-color: #40647C;
+  border-color: #40647C; }
   .btn-primary:hover {
     color: #fff;
-    background-color: #ff8d30;
-    border-color: #ff8726; }
+    background-color: #2f495a;
+    border-color: #2b4354; }
   .btn-primary:focus, .btn-primary.focus {
-    box-shadow: 0 0 0 2px rgba(255, 169, 99, 0.5); }
+    box-shadow: 0 0 0 2px rgba(64, 100, 124, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
-    background-color: #ffa963;
-    border-color: #ffa963; }
+    background-color: #40647C;
+    border-color: #40647C; }
   .btn-primary:active, .btn-primary.active,
   .show > .btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #ff8d30;
+    background-color: #2f495a;
     background-image: none;
-    border-color: #ff8726; }
+    border-color: #2b4354; }
 
 .btn-secondary {
   color: #292b2c;
@@ -1956,24 +1956,24 @@ fieldset[disabled] a.btn {
     border-color: #c12e2a; }
 
 .btn-outline-primary {
-  color: #ffa963;
+  color: #40647C;
   background-image: none;
   background-color: transparent;
-  border-color: #ffa963; }
+  border-color: #40647C; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #ffa963;
-    border-color: #ffa963; }
+    background-color: #40647C;
+    border-color: #40647C; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
-    box-shadow: 0 0 0 2px rgba(255, 169, 99, 0.5); }
+    box-shadow: 0 0 0 2px rgba(64, 100, 124, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #ffa963;
+    color: #40647C;
     background-color: transparent; }
   .btn-outline-primary:active, .btn-outline-primary.active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #ffa963;
-    border-color: #ffa963; }
+    background-color: #40647C;
+    border-color: #40647C; }
 
 .btn-outline-secondary {
   color: #ccc;
@@ -2077,7 +2077,7 @@ fieldset[disabled] a.btn {
 
 .btn-link {
   font-weight: normal;
-  color: #ffa963;
+  color: #40647C;
   border-radius: 0; }
   .btn-link, .btn-link:active, .btn-link.active, .btn-link:disabled {
     background-color: transparent; }
@@ -2086,7 +2086,7 @@ fieldset[disabled] a.btn {
   .btn-link:hover {
     border-color: transparent; }
   .btn-link:focus, .btn-link:hover {
-    color: #ff7f17;
+    color: #263b4a;
     text-decoration: underline;
     background-color: transparent; }
   .btn-link:disabled {
@@ -2204,7 +2204,7 @@ tbody.collapse.show {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #ffa963; }
+    background-color: #40647C; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #636c72;
     cursor: not-allowed;
@@ -2491,12 +2491,12 @@ tbody.collapse.show {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-indicator {
     color: #fff;
-    background-color: #ffa963; }
+    background-color: #40647C; }
   .custom-control-input:focus ~ .custom-control-indicator {
-    box-shadow: 0 0 0 1px #fff, 0 0 0 3px #ffa963; }
+    box-shadow: 0 0 0 1px #fff, 0 0 0 3px #40647C; }
   .custom-control-input:active ~ .custom-control-indicator {
     color: #fff;
-    background-color: white; }
+    background-color: #a0bcce; }
   .custom-control-input:disabled ~ .custom-control-indicator {
     cursor: not-allowed;
     background-color: #eceeef; }
@@ -2525,7 +2525,7 @@ tbody.collapse.show {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-indicator {
-  background-color: #ffa963;
+  background-color: #40647C;
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3E%3Cpath stroke='%23fff' d='M0 2h4'/%3E%3C/svg%3E"); }
 
 .custom-radio .custom-control-indicator {
@@ -2557,7 +2557,7 @@ tbody.collapse.show {
   -moz-appearance: none;
   -webkit-appearance: none; }
   .custom-select:focus {
-    border-color: #ffefe3;
+    border-color: #7fa4bd;
     outline: none; }
     .custom-select:focus::-ms-value {
       color: #464a4c;
@@ -2670,7 +2670,7 @@ tbody.collapse.show {
 .nav-pills .nav-link.active {
   color: #fff;
   cursor: default;
-  background-color: #ffa963; }
+  background-color: #40647C; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -3005,8 +3005,8 @@ tbody.collapse.show {
   margin-left: -0.625rem; }
 
 .card-primary {
-  background-color: #ffa963;
-  border-color: #ffa963; }
+  background-color: #40647C;
+  border-color: #40647C; }
   .card-primary .card-header,
   .card-primary .card-footer {
     background-color: transparent; }
@@ -3041,7 +3041,7 @@ tbody.collapse.show {
 
 .card-outline-primary {
   background-color: transparent;
-  border-color: #ffa963; }
+  border-color: #40647C; }
 
 .card-outline-secondary {
   background-color: transparent;
@@ -3201,8 +3201,8 @@ tbody.collapse.show {
 .page-item.active .page-link {
   z-index: 2;
   color: #fff;
-  background-color: #ffa963;
-  border-color: #ffa963; }
+  background-color: #40647C;
+  border-color: #40647C; }
 
 .page-item.disabled .page-link {
   color: #636c72;
@@ -3217,11 +3217,11 @@ tbody.collapse.show {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #ffa963;
+  color: #40647C;
   background-color: #fff;
   border: 1px solid #ddd; }
   .page-link:focus, .page-link:hover {
-    color: #ff7f17;
+    color: #263b4a;
     text-decoration: none;
     background-color: #eceeef;
     border-color: #ddd; }
@@ -3284,9 +3284,9 @@ a.badge:focus, a.badge:hover {
     background-color: #4b5257; }
 
 .badge-primary {
-  background-color: #ffa963; }
+  background-color: #40647C; }
   .badge-primary[href]:focus, .badge-primary[href]:hover {
-    background-color: #ff8d30; }
+    background-color: #2f495a; }
 
 .badge-success {
   background-color: #5cb85c; }
@@ -3398,7 +3398,7 @@ a.badge:focus, a.badge:hover {
 .progress-bar {
   height: 1rem;
   color: #fff;
-  background-color: #ffa963; }
+  background-color: #40647C; }
 
 .progress-bar-striped {
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -3463,14 +3463,14 @@ a.badge:focus, a.badge:hover {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #ffa963;
-    border-color: #ffa963; }
+    background-color: #40647C;
+    border-color: #40647C; }
     .list-group-item.active .list-group-item-heading,
     .list-group-item.active .list-group-item-heading > .small,
     .list-group-item.active .list-group-item-heading > small {
       color: inherit; }
     .list-group-item.active .list-group-item-text {
-      color: white; }
+      color: #d3e0e8; }
 
 .list-group-flush .list-group-item {
   border-right: 0;
@@ -4086,10 +4086,10 @@ button.close {
   background-color: #f7f7f7; }
 
 .bg-primary {
-  background-color: #ffa963 !important; }
+  background-color: #40647C !important; }
 
 a.bg-primary:focus, a.bg-primary:hover {
-  background-color: #ff8d30 !important; }
+  background-color: #2f495a !important; }
 
 .bg-success {
   background-color: #5cb85c !important; }
@@ -5949,10 +5949,10 @@ a.text-muted:focus, a.text-muted:hover {
   color: #4b5257 !important; }
 
 .text-primary {
-  color: #ffa963 !important; }
+  color: #40647C !important; }
 
 a.text-primary:focus, a.text-primary:hover {
-  color: #ff8d30 !important; }
+  color: #2f495a !important; }
 
 .text-success {
   color: #5cb85c !important; }
