--- a/css/custom.css
+++ b/css/custom.css
@@ -1,46 +1,58 @@
 @import url("https://fonts.googleapis.com/css?family=Work+Sans:400,700");
 .bg-next {
-  background-color: #40647C !important; }
+    background-color: #ffa963 !important;
+}
 
 .c-next {
-  color: #40647C !important; }
+    color: #ffa963 !important;
+}
 
 .logotype-text {
-  text-transform: uppercase;
-  letter-spacing: 0.125rem;
-  font-size: 1.5rem; }
+    text-transform: uppercase;
+    letter-spacing: 0.125rem;
+    font-size: 1.5rem;
+}
 
 .index-links {
-  font-weight: bold;
-  font-size: 7.5rem;
-  text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  line-height: 9rem;
-  hanging-punctuation: force-end;
-  color: #ffa963; }
+    font-weight: bold;
+    font-size: 7.5rem;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    line-height: 9rem;
+    hanging-punctuation: force-end;
+    color: #40647C;
+}
 
 .index-links:hover {
-  text-decoration: none;
-  color: #434343; }
+    text-decoration: none;
+    color: #434343;
+}
 
 @media (max-width: 640px) {
-  .index-links {
-    font-size: 6rem;
-    letter-spacing: 0.2rem;
-    line-height: 7rem; } }
+    .index-links {
+        font-size: 6rem;
+        letter-spacing: 0.2rem;
+        line-height: 7rem;
+    }
+}
 
 @media (max-width: 544px) {
-  .index-links {
-    font-size: 4rem;
-    letter-spacing: 0.2rem;
-    line-height: 4.5rem; } }
+    .index-links {
+        font-size: 4rem;
+        letter-spacing: 0.2rem;
+        line-height: 4.5rem;
+    }
+}
 
 .footer p {
-  letter-spacing: 0.075rem;
-  font-size: 0.8rem; }
+    letter-spacing: 0.075rem;
+    font-size: 0.8rem;
+}
 
 .strikethrough {
-  text-decoration: line-through; }
+    text-decoration: line-through;
+}
 
 .color-strip {
-  height: 0.3rem; }
+    height: 0.3rem;
+}
